<resources>
    <string name="app_name">City-Guide-App</string>
    <string name="logo_name">Get A Way</string>
    <string name="slogan_name">We will help you\nto find your way!</string>
    <string name="powered_by_line">Powered by Abhishek Bansode</string>
    <string name="splash_screen_img">splash_screen_img</string>
    <string name="backImage">backImage</string>

    <!-- String for On Boarding Screen -->
    <!-- Titles -->
    <string name="first_slide_title">Search Your location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>

    <!-- Descriptions -->
    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display specific or all related shops to match your search.</string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform bookings as well.</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by following simple steps.</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you don\'t have to worry about anything.</string>

    <!-- Buttons -->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started_btn">Lets Get Started</string>
    <string name="img_holder">img_holder</string>
    <string name="menuImgDes">menuImgDes</string>
    <string name="missing_place_icon_des">Missing_place_icon_Des</string>

    <!-- Strings for DashBoard -->

    <!-- Strings for Categories-->
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="education">Education</string>
    <string name="banks">Banks</string>
    <string name="airports">Airports</string>

    <!-- Titles and descriptions -->
    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_locations_descriptions">All the locations that are featured and have the top demand in town!</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search…</string>
    <string name="searchIconToLeft">SearchIconToLeft</string>
    <string name="mcdonald_s">McDonald\'s</string>
    <string name="demo_desc">ultricies tristique nulla aliquet enim tortor at auctor urna nunc id cursus metus aliquam eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci a scelerisque purus semper eget duis at tellus at urna condimentum mattis pellentesque id nibh tortor id aliquet lectus proin nibh nisl condimentum id venenatis a</string>
    <string name="mcdonalds_1">McDonald\'s</string>
    <string name="asbk_dkljod_jkj_woej_fskdj_wjewoj_wjekf_wejkwje">asbk dkljod jkj woej fskdj wjewoj wjekf wejkwje</string>
    <string name="restaurant_1">Restaurant</string>
    <string name="demo_desc1">this_is_demo_description_this_is_demo_description_this_is_demo_description</string>
    <string name="this_is_demo_description_this_is_demo_description_this_is_demo_description">demo_des11</string>
    <string name="skip">SKIP</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="all_categories">All Categories</string>
    <string name="add_missing_place">Add Missing Place</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="restaurants1">Restaurants</string>
    <string name="banks1">Banks</string>
    <string name="education1">Education</string>
    <string name="shops1">Shops</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate us</string>
    <string name="car_rent">Car Rent</string>
    <string name="hospitals">Hospitals</string>
    <string name="expand_all">expand all</string>

    <!--    TODO: Retailer Panel Strings -->
    <!--    General Strings -->
    <string name="sign_up">Sign UP</string>
    <string name="retailer_heading">Grow\nYour Business</string>
    <string name="retailer_tag_line">We will help you to grow your business</string>
    <string name="crate_account">Create\nAccount</string>
    <string name="how_we_work">How we work?</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>
    <string name="enter_full_name">Full Name</string>
    <string name="otp_code_text">Co\nde</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="back_arrow_btn_img">Back-Arrow-Btn-img</string>
    <string name="email">Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="username">Username</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="select_your_age">Select Your Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="phone_number">Phone Number</string>
    <string name="verify_code">Verify code</string>
    <string name="verification">Verification</string>
    <string name="enter_one_time_password_sent_on_your_phone">Enter one time password sent on your Phone</string>
    <string name="back_to_signup_page">Back to SignUp Page</string>
    <string name="create_account">Create Account</string>
    <string name="back_to_retailers_screen">Back to Retailers Screen</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="search_icon">Search Icon</string>
    <string name="categories_car_img">Categories Car Img</string>
    <string name="food_img">Food Img</string>
    <string name="doctor_img">Doctor Img</string>
    <string name="friday_offer_img">Friday Offer Img</string>
    <string name="provide_your_account_s_email_for_which_you_want_to_reset_your_password">Provide your account\'s email for which you want to reset your password</string>
    <string name="next">Next</string>
    <string name="password_updated">Password Updated</string>
    <string name="done_icon_image">Done Icon Image</string>
    <string name="your_password_has_been_updated_successfully">Your password has been updated Successfully</string>
    <string name="make_selection">Make Selection</string>
    <string name="select_which_contact_detail_should_we_use_to_reset_your_password">Select which contact detail should we use to reset your password</string>
    <string name="mobile_icon_image">Mobile Icon Image</string>
    <string name="via_sms">Via Sms</string>
    <string name="_4753388744">+4753388744</string>
    <string name="sms_icon_image">SMS Icon Image</string>
    <string name="via_email">Via Email</string>
    <string name="support_gmail_com">support@gmail.com</string>
    <string name="bold_circle_image">Bold Circle Image</string>
    <string name="password_icon_image">Password Icon Image</string>
    <string name="new_credentials">New Credentials</string>
    <string name="your_identity_has_been_verified_set_your_new_password">Your identity has been verified! Set your new password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="ok">OK</string>
    <string name="menu_icon_image">Menu Icon Image</string>
    <string name="bicycle_image">Bicycle Image</string>

    <string name="new_york_city">New York City</string>
    <string name="action_1">ACTION 1</string>
    <string name="action_2">ACTION 2</string>
</resources>