<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/lightWhite"
    android:padding="15dp">

    <TextView
        android:id="@+id/menu_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="10dp"
        android:layout_toStartOf="@+id/bicycleImage"
        android:text="@string/slogan_name" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/menu_slogan"
        android:fontFamily="sans-serif-black"
        android:text="@string/logo_name"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_above="@id/app_name"
        android:contentDescription="@string/menu_icon_image"
        android:src="@drawable/menu_icon" />

    <ImageView
        android:id="@+id/bicycleImage"
        android:layout_width="140dp"
        android:layout_height="190dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/bicycle_image"
        android:src="@drawable/half_bicycle" />

</RelativeLayout>