<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".Common.LogInSignUp.RetailerStartUpScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/white"
            android:contentDescription="@string/bold_circle_image"
            android:padding="35dp"
            android:src="@drawable/black_circle_bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/retailer_heading"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/retailer_tag_line"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/custom_btn_bg"
                android:text="@string/login"
                android:textColor="@color/black"
                android:transitionName="transition_login"
                tools:ignore="ButtonStyle" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signUp_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:transitionName="transition_login"
                android:background="@drawable/custom_btn_bg"
                android:text="@string/sign_up" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/how_we_work" />

    </LinearLayout>

</ScrollView>