<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".Common.LogInSignUp.SignUp2Class">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/signup2_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back_arrow_btn_img"
            android:padding="5dp"
            android:src="@drawable/icon_general_back"
            android:transitionName="transition_back_arrow_btn" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/signup_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/crate_account"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:transitionName="transition_title_text" />

            <TextView
                android:id="@+id/signup_slide_text"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/black_circular_border"
                android:fontFamily="@font/poppins_bold"
                android:padding="20dp"
                android:text="@string/_2_3"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:transitionName="transition_slide_text" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_gender"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/others" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_your_age"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <DatePicker
                android:id="@+id/age_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:spinnersShown="true" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup_next_button_page2"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_btn_bg"
            android:elevation="5dp"
            android:text="@string/next_btn"
            android:textColor="@color/black"
            android:transitionName="transition_next_btn" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup_login_button"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/black_border"
            android:elevation="5dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/login"
            android:textColor="@color/black"
            android:transitionName="transition_login_btn" />

    </LinearLayout>

</ScrollView>