<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Common.LogInSignUp.ForgetPasswordSuccessMessage">

    <ImageView
        android:id="@+id/password_updated_backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back_arrow_btn_img"
        android:padding="5dp"
        android:src="@drawable/icon_general_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-60dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/password_updated"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:lottie_rawRes="@raw/success_animation_2"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/your_password_has_been_updated_successfully"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/password_updated_login_btn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_btn_bg"
            android:text="@string/login"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>